# dnd

./: .gitignore  AI_Dungeon_Master_Design.md  design.md
api_gateway/: pyproject.toml  requirements.txt
api_gateway/app/: config.py  main.py  models.py  service_clients.py  session_store.py
api_gateway/tests/: test_routes.py
combat_engine/: pyproject.toml  requirements.txt
combat_engine/app/: config.py  event_log.py  main.py  models.py  service_clients.py
combat_engine/tests/: test_routes.py
dm_service/: pyproject.toml  requirements.txt
dm_service/app/: config.py  database.py  dispatcher.py  event_log.py  main.py  models.py  planner.py  prompt_builder.py  provider.py  service_clients.py
dm_service/tests/: test_dispatcher.py  test_planner.py  test_provider.py  test_routes.py
event_log_service/: .env.example  pyproject.toml  requirements.txt
event_log_service/app/: config.py  database.py  dependencies.py  main.py  models.py  streams.py
event_log_service/tests/: test_models.py  test_routes.py
map_service/: pyproject.toml  requirements.txt
map_service/app/: config.py  database.py  dependencies.py  event_log.py  main.py  models.py
map_service/tests/: test_routes.py
memory_service/: .env.example  Dockerfile  pyproject.toml  requirements.txt
memory_service/app/: config.py  database.py  dependencies.py  embeddings.py  event_handlers.py  main.py  models.py  stream_consumer.py
memory_service/tests/: test_event_handlers.py  test_models.py  test_routes.py
npc_service/: requirements.txt
npc_service/app/: config.py  database.py  event_log.py  main.py  models.py  prompt_builder.py  redis_client.py  service_clients.py
npc_service/tests/: test_prompt_builder.py  test_routes.py
rules_engine/: .env.example  pyproject.toml  requirements.txt
rules_engine/app/: ability_check.py  attack.py  character_sheet.py  combat_rules.py  concentration.py  conditions.py  dice.py  event_log.py  grapple.py  main.py  models.py  movement.py  spells.py  srd_data.py
rules_engine/scripts/: fetch_srd_data.py
rules_engine/tests/: test_ability_check.py  test_attack.py  test_concentration.py  test_conditions.py  test_dice.py  test_grapple.py
story_state_service/: requirements.txt
story_state_service/app/: config.py  database.py  event_log.py  main.py  models.py
world_state_service/: .env.example  pyproject.toml
(+9 files in other folders)
